# co2-manager

./: .gitignore  Cargo.toml  docker-compose.yml
carbon-deposit-management/: Cargo.toml  Dockerfile.dev  Dockerfile.prod  build.rs
carbon-deposit-management/proto/: carbonDeposit.proto
carbon-deposit-management/src/: main.rs
carbon-deposit-management/src/server/: mod.rs
carbon-deposit-management/src/server/application/: mod.rs
carbon-deposit-management/src/server/application/async/: mod.rs
carbon-deposit-management/src/server/application/grpc/: carbon_deposit.rs  mod.rs
carbon-deposit-management/src/server/application/sns/: account_created.rs  mod.rs
carbon-deposit-management/src/server/application/sync/: mod.rs
carbon-deposit-management/src/server/domains/entities/: carbon_deposit.rs
carbon-deposit-management/src/server/domains/errors/: carbon_deposit.rs
carbon-deposit-management/src/server/domains/repositories/: mod.rs  (+1 more)
carbon-deposit-management/src/server/infra/: mod.rs  repository_impl.rs
carbon-deposit-management/src/server/tests/: mod.rs  user.rs
user-account-management/: Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.prod  build.rs
user-account-management/copilot/pipelines/co2-manager-main/: buildspec.yml  manifest.yml
user-account-management/copilot/user-account-management/: manifest.yml
user-account-management/proto/: user.proto
user-account-management/src/: main.rs
user-account-management/src/server/: mod.rs
user-account-management/src/server/application/: mod.rs
user-account-management/src/server/infra/: mod.rs  repository_impl.rs
user-account-management/src/server/routes/: mod.rs
user-account-management/src/server/tests/: mod.rs  user.rs
user-co2-management/: Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.prod
user-co2-management/proto/: user.proto
user-co2-management/src/: main.rs
user-co2-management/src/server/: mod.rs
user-co2-management/src/server/routes/: mod.rs
(+30 files in other folders)
