[package]
name = "user-co2-management"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8.3"
tokio = { version = "1.22.0", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.66"
thiserror = "1.0.37"
prost = "0.11.5"
async-trait = "0.1.60"

[build-dependencies]
tonic-build = "0.8.4"
